fix hidden visiblle contollers

--- a/src/components/videoPlayer/VideoPlayer.module.scss
+++ b/src/components/videoPlayer/VideoPlayer.module.scss
@@ -59,6 +59,30 @@
 	width: 100%;
 	height: 100%;
 }
+.videoPlayer__resize {
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	z-index: 2;
+	border-bottom: 5px solid var(--border-color);
+	border-right: 5px solid var(--border-color);
+	cursor: se-resize;
+	transition: opacity var(--transition) ease;
+	opacity: 0;
+}
+.videoPlayer__close {
+	transition: opacity var(--transition) ease;
+	opacity: 0;
+	z-index: 1;
+	position: absolute;
+	right: 20px;
+	top: 20px;
+	background: none;
+	border: none;
+	cursor: pointer;
+}
 
 .volume__positionRange {
 	position: absolute;
@@ -103,6 +127,7 @@
 }
 .controls__progress {
 	width: 100%;
+	align-self: flex-start;
 }
 
 //controlers line
