--- a/src/components/videoPlayer/inputStyle.module.scss
+++ b/src/components/videoPlayer/inputStyle.module.scss
@@ -6,9 +6,8 @@
 	cursor: pointer;
 	padding: 0px 10px;
 	width: 100%;
-	height: 15px;
+	height: 25px;
 	display: flex;
-	align-items: end;
 }
 
 /* Removes default focus */
